--- a/abilities.html
+++ b/abilities.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Abhisit's Abilities</title>
+    <title>Prasit's Abilities</title>
 </head>
 
 <body>
@@ -45,15 +45,15 @@
                     <tr>
                         <td>HTML</td>
                         <!--Emoji Windows: WIN+. or WIN+; | MAC: ^+Command+space-->
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
                         <td>CSS</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
                         <td>JavaScript</td>
-                        <td>⭐⭐⭐⭐</td>
+                        <td>⭐⭐⭐</td>
                     </tr>      
                     <tr>
                         <td>Photography</td>
@@ -69,7 +69,7 @@
                     </tr>
                     <tr>
                         <td>SQL</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
                         <td>NoSql</td>
@@ -77,7 +77,7 @@
                     </tr>      
                     <tr>
                         <td>Computer Graphics</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>⭐⭐⭐</td>
                     </tr>    
                 </table>   
             </td>
