--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,7 @@
                     <a href="https://twitter.com/waizonne" class="fa fa-twitter" target="_blank"
                         style="font-size: 40px; color: rgb(63, 185, 255);"></a>
                 </p>
-                <p>Website: <a href="https://ukham.com/">Ukham.com</a></p>
-                <p>Email: <a href="mailto:abhisit_u@bu.ac.th">abhisit_u@bu.ac.th</a></p>
+                <p>Email: <a href="prasit.yoks@bu.ac.th">prasit.yoks@bu.ac.th</a></p>
         </tr>
     </table>
 </body>
