--- a/experiences.html
+++ b/experiences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Abhisit's Experiences</title>
+    <title>Prasit's Experiences</title>
 </head>
 <body>
     <!-- Menu -->
