--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile - Abhisit Profile</title>
+    <title>Profile - prasit Profile</title>
 </head>
 <body>
     <!-- Menu -->
